# AVM

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md
avm-core/: Cargo.toml
avm-core/src/: config.rs  error.rs  executor.rs  lib.rs  plugin.rs  runtime.rs  telemetry.rs
avm-examples/: Cargo.toml
avm-examples/examples/: basic_usage.rs
avm-ipc/: Cargo.toml
avm-ipc/src/: lib.rs
avm-plugin/: Cargo.toml
avm-plugin/src/: lib.rs
avm-runtime/: Cargo.toml
avm-runtime/src/: lib.rs  runtime_impl.rs
avm-sandbox/: Cargo.toml
avm-sandbox/src/: lib.rs
