[package]
name = "avm-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandbox implementation for Astrolune Virtual Machine"

[dependencies]
avm-core = { path = "../avm-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
